# camera

./: BenchmarkDatasetReader.h  CMakeLists.txt
MatlabEvaluationCode/: evaCameraPlot.m  photometricResponcePlot.m  r24rgb.m  synthesize.m  tiUpdate.m
include/: benchmark_dataset_reader.h  exposure_image.h  fov_undistorter.h  photometric_undistorter.h  types.h
src/: calibration.cpp  eva_camera.cpp  eva_color.cpp  fov_undistorter.cpp  orb_camera.cpp  photometric_undistorter.cpp  playback_dataset.cpp  response_calib.cpp  vignette_calib.cpp
